fix spacing issue around last paragraph

--- a/style.css
+++ b/style.css
@@ -22,3 +22,7 @@ h2 {
     padding: 25px;
     margin: 0 auto;
 }
+
+.read-more {
+    margin: 0px;
+}
